# SimpleBLE

examples/simpleble/cpp/BP/: BP.cpp  CMakeLists.txt
examples/simpleble/cpp/connect_safe/: CMakeLists.txt
simpleble/src/frontends/base/: Adapter.cpp
